# antenna-placement-optimizer

./: .gitignore  GENETIC_IMPLEMENTATION.md  README.md
.github/: copilot-instructions.md
Algorithms/: ALGORITHM_EXPLANATION.md  GENETIC_ALGORITHM_EXPLANATION.md  SIMULATED_ANNEALING_EXPLANATION.md  antenna_placement_algorithm_comparison.ipynb  genetic_antenna_placement.ipynb  greedy_antenna_placement.ipynb  simulated_annealing_antenna_placement.ipynb
backend/: .env.example  .gitignore  README.md  pyproject.toml  test_api.py  test_genetic.py  test_genetic_api.py  test_simulated_annealing.py
backend/app/: __init__.py  antenna_system.py  config.py  debug_distances.py  main.py  models.py
backend/app/algorithms/: genetic.py  greedy.py  hill_climbing.py  simulated_annealing.py  tabu_search.py  vns.py
export/: antenna-solution-2025-11-27T14-53-44.json  antenna-solution-2025-11-27T15-45-15.json  comparison_results_2025-12-11T23-35-36-056Z.json  comparison_results_2025-12-12T08-39-26-563Z.json  research_data_2025-12-11T23-35-33-488Z (1).txt  research_data_2025-12-12T08-39-30-091Z.txt
frontend/: ENV_SETUP.md  FASTAPI_INTEGRATION.md  FASTAPI_SPEC.md  IMPLEMENTATION.md  IMPORT_EXPORT_FEATURE.md  QUICKSTART_FASTAPI.md  README.md  lint_errors.txt  package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/components/: calculation-panel.tsx  canvas-grid.tsx  control-panel.tsx  grid-map.tsx  grid-seeding-panel.tsx  stats-card.tsx
to add/: -tabu_antennes_dataset.py  hill_climbing_basic-2 (1).ipynb  vns_antenna_placement.ipynb
(+7 files in other folders)
